--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,7 +2,7 @@ security:
     # https://symfony.com/doc/current/security/authenticator_manager.html
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#c-hashing-passwords
-    password_hashers:
+    encoders:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
         App\Entity\User:
             algorithm: auto
@@ -21,6 +21,10 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            json_login:
+                username_path: email
+                password_path: password
+                check_path: api_login
 
 
             # activate different ways to authenticate
