--- a/.env
+++ b/.env
@@ -28,5 +28,5 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/api_ufo"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='http://localhost:3000/'
+CORS_ALLOW_ORIGIN='*'
 ###< nelmio/cors-bundle ###
