--- a/.env
+++ b/.env
@@ -30,3 +30,9 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/api_ufo"
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='*'
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=884f707a3716ca2dfb7ea927bbebf64a
+###< lexik/jwt-authentication-bundle ###
