--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,14 +18,31 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
-            lazy: true
-            provider: app_user_provider
+        login:
+            pattern: ^/api/login
+            stateless: true
             json_login:
                 username_path: email
                 password_path: password
                 check_path: api_login
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
+        api:
+            pattern:   ^/api
+            stateless: true
+            jwt: ~
+
+    access_control:
+        - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api/event, roles: PUBLIC_ACCESS }
+        - { path: ^/api/newevent, roles: PUBLIC_ACCESS }
+        - { path: ^/api/eventlist, roles: PUBLIC_ACCESS }
+        - { path: ^/api/account, roles: PUBLIC_ACCESS }
+        - { path: ^/api/article, roles: PUBLIC_ACCESS }
+        - { path: ^/api/signup, roles: PUBLIC_ACCESS }
+        - { path: ^/api/updateAccount, roles: PUBLIC_ACCESS }
+        - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -35,6 +52,3 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
-    access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
