--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=52fe831d4d39e142af42c6bc5576a9b7
+APP_SECRET=***********
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -34,5 +34,5 @@ CORS_ALLOW_ORIGIN='*'
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=884f707a3716ca2dfb7ea927bbebf64a
+JWT_PASSPHRASE=***************
 ###< lexik/jwt-authentication-bundle ###
